<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

  <!-- Title of the "Voicemail" settings screen, with a text label identifying which SIM the settings are for. -->
  <string name="voicemail_settings_with_label">Voicemail (<xliff:g example="Mock Carrier" id="subscriptionlabel">%s</xliff:g>)</string>

  <!-- Call settings screen, setting option name -->
  <string name="voicemail_settings_title">Voicemail</string>

  <!-- DO NOT TRANSLATE. Internal key for a voicemail notification preference. -->
  <string name="voicemail_notifications_key" translatable="false">voicemail_notification_key</string>

  <!-- Voicemail notifications title. The user clicks on this preference to select
         which sound to play and whether to vibrate when a voicemail notification is received.
         [CHAR LIMIT=30] -->
  <string name="voicemail_notifications_preference_title">Notifications</string>
  <string name="voicemail_advanced_settings_key" translatable="false">voicemail_advanced_settings_key</string>

  <!-- Title for advanced settings in the voicemail settings -->
  <string name="voicemail_advanced_settings_title">Advanced Settings</string>

  <!-- DO NOT TRANSLATE. Internal key for a visual voicemail preference. -->
    <string name="voicemail_visual_voicemail_key" translatable="false">
        voicemail_visual_voicemail_key
    </string>
  <!-- DO NOT TRANSLATE. Internal key for a visual voicemail archive preference. -->
    <string name="voicemail_visual_voicemail_archive_key" translatable="false">
        archive_is_enabled
    </string>
    <string name="voicemail_visual_voicemail_donation_key" translatable="false">
        donate_voicemails
    </string>
  <!-- DO NOT TRANSLATE. Internal key for a voicemail change pin preference. -->
  <string name="voicemail_change_pin_key" translatable="false">voicemail_change_pin_key</string>

  <!-- Visual voicemail on/off title [CHAR LIMIT=40] -->
  <string name="voicemail_visual_voicemail_switch_title">Visual Voicemail</string>

  <!-- Visual voicemail archive on/off title [CHAR LIMIT=40] -->
  <string name="voicemail_visual_voicemail_auto_archive_switch_title">
    Extra backup and storage
  </string>

  <!-- Title for visual voicemail setting that enables user to donate their voicemails for analysis.
       [CHAR LIMIT=40] -->
  <string name="voicemail_visual_voicemail_donation_switch_title">
    Voicemail transcription analysis
  </string>
  <!-- Summary information for visual voicemail donation setting when visual voicemail is not enabled
       [CHAR LIMIT=NONE] -->
  <string name="voicemail_donate_preference_summary_disable">Visual voicemail must be enabled to donate voicemails</string>
  <!-- Summary information for visual voicemail donation setting when visual voicemail is not activated
       [CHAR LIMIT=NONE] -->
  <string name="voicemail_donate_preference_summary_not_activated">Visual voicemail is not activated yet, please try again later</string>
  <!-- Summary information for visual voicemail donation setting [CHAR LIMIT=NONE] -->
  <string name="voicemail_donate_preference_summary_info">Let Google review your voicemail messages to improve transcription quality</string>

  <!-- Voicemail change PIN dialog title [CHAR LIMIT=40] -->
  <string name="voicemail_set_pin_preference_title">Set PIN</string>
  <!-- Voicemail change PIN dialog title [CHAR LIMIT=40] -->
  <string name="voicemail_change_pin_preference_title">Change PIN</string>

  <string name="voicemail_change_pin_preference_summary_disable">Visual voicemail must be enabled to change PIN</string>
  <string name="voicemail_change_pin_preference_summary_not_activated">Visual voicemail is not activated yet, please try again later</string>

  <!-- Message on the dialog when PIN changing is in progress -->
  <string name="vm_change_pin_progress_message">Please wait.</string>
  <!-- Error message for the voicemail PIN change if the PIN is too short -->
  <string name="vm_change_pin_error_too_short">The new PIN is too short.</string>
  <!-- Error message for the voicemail PIN change if the PIN is too long -->
  <string name="vm_change_pin_error_too_long">The new PIN is too long.</string>
  <!-- Error message for the voicemail PIN change if the PIN is too weak -->
  <string name="vm_change_pin_error_too_weak">The new PIN is too weak. A strong password should not have continuous sequence or repeated digits.</string>
  <!-- Error message for the voicemail PIN change if the old PIN entered doesn't match  -->
  <string name="vm_change_pin_error_mismatch">The old PIN does not match.</string>
  <!-- Error message for the voicemail PIN change if the new PIN contains invalid character -->
  <string name="vm_change_pin_error_invalid">The new PIN contains invalid characters.</string>
  <!-- Error message for the voicemail PIN change if operation has failed -->
  <string name="vm_change_pin_error_system_error">Unable to change PIN</string>
  <!-- Message to replace the transcription if a visual voicemail message is not supported-->
  <string name="vvm_unsupported_message_format">Unsupported message type, call <xliff:g example="*86" id="number">%s</xliff:g> to listen.</string>

  <!-- The title for the change voicemail PIN activity -->
  <string name="change_pin_title">Change Voicemail PIN</string>
  <!-- The label for the continue button in change voicemail PIN activity -->
  <string name="change_pin_continue_label">Continue</string>
  <!-- The label for the cancel button in change voicemail PIN activity -->
  <string name="change_pin_cancel_label">Cancel</string>
  <!-- The label for the ok button in change voicemail PIN activity -->
  <string name="change_pin_ok_label">Ok</string>
  <!-- The title for the enter old pin step in change voicemail PIN activity -->
  <string name="change_pin_enter_old_pin_header">Confirm your old PIN</string>
  <!-- The hint for the enter old pin step in change voicemail PIN activity -->
  <string name="change_pin_enter_old_pin_hint">Enter your voicemail PIN to continue.</string>
  <!-- The title for the enter new pin step in change voicemail PIN activity -->
  <string name="change_pin_enter_new_pin_header">Set a new PIN</string>
  <!-- The hint for the enter new pin step in change voicemail PIN activity -->
  <string name="change_pin_enter_new_pin_hint">PIN must be <xliff:g example="4" id="min">%1$d</xliff:g>-<xliff:g example="7" id="max">%2$d</xliff:g> digits.</string>
  <!-- The title for the confirm new pin step in change voicemail PIN activity -->
  <string name="change_pin_confirm_pin_header">Confirm your PIN</string>
  <!-- The error message for th confirm new pin step in change voicemail PIN activity, if the pin doen't match the one previously entered -->
  <string name="change_pin_confirm_pins_dont_match">PINs don\'t match</string>
  <!-- The toast to show after the voicemail PIN has been successfully changed -->
  <string name="change_pin_succeeded">Voicemail PIN updated</string>
  <!-- The error message to show if the server reported an error while attempting to change the voicemail PIN -->
  <string name="change_pin_system_error">Unable to set PIN</string>

  <string name="vvm_config_override_load_current_key" translatable="false">vvm_config_override_load_current</string>
  <string name="vvm_config_override_enabled_key" translatable="false">vvm_config_override_enabled</string>

</resources>
